--- a/style.css
+++ b/style.css
@@ -2,31 +2,46 @@
     font-family: "Baskerville";
     src: url("Fonts/Libre_Baskerville/LibreBaskerville-Bold.ttf");
 }
+@font-face {
+    font-family: 'Bitter Bold';
+    src: url(Fonts/Bitter_Bold/Bitter-Bold.ttf);
+}
+@font-face {
+    font-family: 'Baskerville Bold';
+    src: url(Fonts/Baskerville/URW\ Baskerville\ W10\ Ultra\ Bold.ttf);
+}
 
 
 body {
     
-    margin: 50px 110px;
+   
     background-color: rgb(200, 200, 200);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.03em;
+    margin-bottom: 20px;
+}
+main {
+    margin: auto;
+    width: 80%;
 }
 
 h1 {
     font-weight: bold;
-    font-size: 4em;
+    font-size: 5em;
     text-align: center;
-    margin: auto;
-    font-family: "Baskerville", Arial, serif;
+    font-family: 'Baskerville Bold', 'Bitter Bold', "Baskerville", Arial, serif;
+    margin-bottom: 0px;
+    margin-top: 40px;
 }
 
 h2{ 
-    color: red;
-    font-family: "Baskerville", Arial, Helvetica, serif;
+    color: #cf0025;
+    font-family: 'Baskerville Bold', 'Bitter Bold', "Baskerville", Arial, Helvetica, serif;
     font-weight: 800;
+    font-size: 2em;
 }
 .linkred {
-    color: red;
+    color: #cf0025;
     font-weight: bold;
     text-decoration: underline;
 }
@@ -60,28 +75,33 @@ tr :hover {
 } 
 .image {
     
-    width: 900px;
+    width: 90%;
     
-    margin-top: 30px;
-    margin-bottom: 10px;
-    margin-left: 35px;
-    margin-right: 0;
+    margin: auto;
+    display: block;
   
 }
 figure {
     
     background-color: rgb(51, 51, 51);
-    border: 3px solid red;
+    border: 3px solid #cf0d30;
     border-radius: 10px;
     color: white;
+    padding-top: 40px;
+    margin-left: 0px;
+    width: 100%;
+    
 }
 figcaption {
     text-align: center;
+    
     font-style: italic;
     font-weight: bold;
     padding-bottom: 30px;
     font-size: 1.15em;
+    margin: 0 60px;
 }
+
 #commentaireTcp { 
     color: rgb(79, 69, 174) ;
     border-color: rgb(79, 69, 174) ;
