modification du tableau

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ th {padding: 10px;
 td {
     padding: 8px;
 }
+
+td:nth-child(1) {
+    text-align: center;
+}
+
 tr :hover {
     cursor: pointer;
     background-color: rgb(153, 153, 153);
