--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h2{
 }
 table {
     border-collapse: collapse;
+    width: 100%;
     
 }
 thead {
@@ -85,7 +86,6 @@ tr :hover {
 .image {
     
     width: 90%;
-    
     margin: auto;
     display: block;
   
@@ -133,4 +133,5 @@ pre {
     line-height: 1.4em;
     width : 70%;
     padding-left: 30px;
+    word-break: break-all ;
 }
